k8s-manifests/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-database
  labels:
    app: kong-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-database
  template:
    metadata:
      labels:
        app: kong-database
    spec:
      # ===============================================
      # CONTENEDOR PRINCIPAL (Confía en el Entrypoint por defecto)
      # ===============================================
      containers:
      - name: postgres
        image: postgres:11
        # El entrypoint por defecto se encarga de la lógica de POSTGRES_USER/DB
        ports:
          - containerPort: 5432
        livenessProbe:
          exec:
            # Revertimos el chequeo al usuario por defecto 'postgres' para simplificar,
            # pero puedes usar 'kong' si la DB se inicializa con el usuario 'kong'.
            command: ["pg_isready", "-U", "postgres", "-d", "kong"] 
          initialDelaySeconds: 15
          periodSeconds: 10
