k8s-manifests/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-deployment
  labels:
    app: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      # Init Container para esperar que las migraciones terminen
      containers:
      - name: kong
        image: kong:latest # Será reemplazada por GCR en el pipeline
        ports:
          - containerPort: 8000
          - containerPort: 8443
          - containerPort: 8001
        # NOTA: Se asume que las migraciones se ejecutarán manualmente o en otro InitContainer
---
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
spec:
  type: LoadBalancer # Exponer el servicio al exterior (HTTP/S)
  selector:
    app: kong
  ports:
    - name: proxy-http
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: admin-api
      protocol: TCP
      port: 8001
      targetPort: 8001
