k8s-manifests/konga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga-deployment
  labels:
    app: konga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga:next # Será reemplazada por GCR en el pipeline
        ports:
          - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: konga-service
spec:
  type: LoadBalancer # Exponer la GUI al exterior
  selector:
    app: konga
  ports:
    - port: 1337
      targetPort: 1337
